@@ -1,3 +1,6 @@
+* Fixing compatibility issues between C++ bson parser and js parser
+* Added Symbol support to C++ parser
+
 0.9.6-17 2011-09-22
 * Fixed bug in waitForConnection that would lead to 100% cpu usage, Issue #352
 
